added reset button

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,6 +23,8 @@
                   <span class="label-body" >SMS</span>
                 </label>
           <button class="button-primary" type="submit" name="button">Add</button>
+          <!-- <div class="one columns"> -->
+          <!-- </div> -->
         </form>
         <h5>Totals</h5>
         <table>
@@ -59,6 +61,8 @@
           <la18 13:00:38 GMT+0200 (SAST)sms3.5Fri Aug 10 2018 13:02:02 GMT+0200 (SAST)sms4.25Fri Aug 10 2018 13:02:04 GMT+0200 (SAST)call7bel for="">Critical level</label>
             <input class="u-full-width criticalLevelSetting" type="number"step=".01" name="criticalLevel" placeholder="eg. 65.00" value="{{critical}}">
             <button class="button-primary updateSettings" type="submit" name="button">Update settings</button>
+          <a href="/reset"><input type="button" name= "Reset"value="Reset" class="button-primary"> </a>  
+
         </form>
       </div>
     </div>
