added timestamp function

--- a/views/actions.handlebars
+++ b/views/actions.handlebars
@@ -5,12 +5,14 @@
       <th>Type</th>
       <th>Price</th>
       <th>When</th>
+      <th>Ago</th>
     </tr>
     {{#each actionsArray}}
       <tr>
         <td>{{type}}</td>
         <td>{{cost}}</td>
         <td>{{time}}</td>
+        <td>{{ago}}</td>
       </tr>
     {{/each}}
   </table>
